--- a/client/src/app/shop/product-item/product-item.component.html
+++ b/client/src/app/shop/product-item/product-item.component.html
@@ -1,14 +1,13 @@
 <div class="card shadow-sm">
-    <img src="{{product.pictureUrl}}" alt="{{product.name}}" class="img-fluid">
+    <img src="{{product.pictureUrl}}" alt="{{product.name}}" class="img-fluid bg-light">
     <div class="card-body d-flex flex-column">
         <a href="#">
             <h6 class="text-uppercase">{{product.name}}</h6>
         </a>
         <span class="mb-2">{{product.price | currency}}</span>
-        <div class="btn-group mt-auto">
-            <button type="button" class="btn btn-outline-secondary fa fa-shopping-cart my-2"></button>
+        <div>
+            <button type="button" class="btn btn-outline-secondary fa fa-shopping-cart me-2"></button>
             <button type="button" class="btn btn-outline-secondary">View</button>
         </div>
-        <small class="text-body-secondary">9 mins</small>
     </div>
 </div>
