--- a/client/src/app/shop/shop.component.html
+++ b/client/src/app/shop/shop.component.html
@@ -9,19 +9,15 @@
             </select>
             <h5 class="text-warning me-3">Brands</h5>
             <ul class="list-group my-3">
-                <li class="list-group-item active" aria-current="true">An active item</li>
-                <li class="list-group-item">A second item</li>
-                <li class="list-group-item">A third item</li>
-                <li class="list-group-item">A fourth item</li>
-                <li class="list-group-item">And a fifth one</li>
+                <li class="list-group-item" *ngFor="let brand of brands">
+                    {{ brand.name }}
+                </li>
             </ul>
             <h5 class="text-warning me-3">Types</h5>
             <ul class="list-group my-3">
-                <li class="list-group-item active" aria-current="true">An active item</li>
-                <li class="list-group-item">A second item</li>
-                <li class="list-group-item">A third item</li>
-                <li class="list-group-item">A fourth item</li>
-                <li class="list-group-item">And a fifth one</li>
+                <li class="list-group-item" *ngFor="let type of types">
+                    {{ type.name }}
+                </li>
             </ul>
         </section>
         <section class="col-9">
@@ -36,7 +32,7 @@
                 </div>
             </div>
             <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
-                <div class="col" *ngFor="let item of products">
+                <div class="col mb-4" *ngFor="let item of products">
                     <app-product-item [product]="item"></app-product-item>
                 </div>
             </div>
