--- a/client/src/app/shop/shop.component.html
+++ b/client/src/app/shop/shop.component.html
@@ -2,33 +2,49 @@
     <div class="row">
         <section class="col-3">
             <h5 class="text-warning me-3">Sort</h5>
-            <select name="" class="custom-select my-3">
-                <option value="">Alphabetical</option>
-                <option value="">Price: Low to High</option>
-                <option value="">Price: High to Low</option>
+            <select name="" class="custom-select my-3" 
+                (change)="onSortSelected($event.target.value)">
+                <option 
+                    *ngFor="let sortOption of sortOptions"
+                    [value]="sortOption.value">
+                    {{sortOption.name}}
+                </option>
             </select>
             <h5 class="text-warning me-3">Brands</h5>
             <ul class="list-group my-3">
-                <li class="list-group-item" *ngFor="let brand of brands">
+                <li class="list-group-item" 
+                    *ngFor="let brand of brands"
+                    [class.active]="brand.id === this.shopParams.brandId"
+                    [value]="brand.id"
+                    (click)="onBrandSelected(brand.id)">
                     {{ brand.name }}
                 </li>
             </ul>
             <h5 class="text-warning me-3">Types</h5>
             <ul class="list-group my-3">
-                <li class="list-group-item" *ngFor="let type of types">
+                <li class="list-group-item" 
+                    *ngFor="let type of types"
+                    [class.active]="type.id === this.shopParams.typeId"
+                    [value]="type.id"
+                    (click)="onTypeSelected(type.id)">
                     {{ type.name }}
                 </li>
             </ul>
         </section>
         <section class="col-9">
             <div class="d-flex justify-content-between align-items-center pb-2">
-                <header>
-                    <span>Showing <strong>10</strong> of <strong>16</strong> Results</span>
-                </header>
+                <app-paging-header 
+                    [totalCount]="this.totalCount"
+                    [pageNumber]="this.shopParams.pageNumber"
+                    [pageSize]="this.shopParams.pageSize">
+                </app-paging-header>
                 <div class="form-inline mt-2">
-                    <input class="form-control me-2" style="width: 300px;" placeholder="Search.." type="text">
-                    <button class="btn btn-outline-primary my-2">Search</button>
-                    <button class="btn btn-outline-success my-2">Reset </button>
+                    <input class="form-control me-2" #search style="width: 300px;" placeholder="Search.." type="text"
+                    (keyup.enter)="onSearch()">
+                    <button class="btn btn-outline-primary my-2"
+                    (click)="onSearch()">Search</button>
+                    <button class="btn btn-outline-success my-2"
+                    (click)="onReset()">Reset </button>
                 </div>
             </div>
             <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
@@ -36,11 +52,13 @@
                     <app-product-item [product]="item"></app-product-item>
                 </div>
             </div>
+            <div class="d-flex justify-content-center" *ngIf="totalCount > 0">
+                <app-pager
+                    [pageSize]="shopParams.pageSize"
+                    [totalCount]="totalCount"
+                    (pageChanged)="onPageChanged($event)">
+                </app-pager>
+            </div>
         </section>
     </div>
 </div>
-<ul>
-    <li class="list-unstyled" *ngFor="let product of products">
-        {{product.name}}
-    </li>
-</ul>
